test for 760319

Bug: 760319
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I077bb8a053655176fcc62a7aa11c36fa6b910319